--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /part06-Part06_02.Stack/target/
 /part06-Part06_03.MessagingService/target/
 /part06-Part06_04.PrintingACollection/target/
+/part06-Part06_05.SantasWorkshop/target/
+/part06-Part06_06.LongestInCollection/target/
+/part06-Part06_07.HeightOrder/target/
