--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@
 /part06-Part06_05.SantasWorkshop/target/
 /part06-Part06_06.LongestInCollection/target/
 /part06-Part06_07.HeightOrder/target/
+/part06-Part06_08.CargoHold/target/
+/part06-Part06_09.SimpleDictionary/target/
+/part06-Part06_10.TodoList/target/
+/part06-Part06_11.Averages/target/
+/part06-Part06_12.JokeManager/target/
