--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /part06-Part06_10.TodoList/target/
 /part06-Part06_11.Averages/target/
 /part06-Part06_12.JokeManager/target/
+/part06-Part06_13.Exercises/target/
+/part07-Part07_01.LiquidContainers/target/
+/part07-Part07_02.LiquidContainers2/target/
+/part07-Part07_03.Sorting/target/
